--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_four">Make Your App Material</string>
     <string name="button_five">Go Ubiquitous</string>
     <string name="button_six">Capstone </string>
+    <string name="toast_message">This button will launch my</string>
 </resources>
